tests/analyzer/errors/match_alias.ray
fn getValue() -> int {
    return 5
}

fn main() {
    match getValue() @v {
        5 => print v
        else => print "non"
    }
    print v
}

